fix bug that app slider on iphone is drawn ower ui

--- a/frontend/src/collections.css
+++ b/frontend/src/collections.css
@@ -1,5 +1,5 @@
 :root {
-  height: 100dvh;
+  height: var(--vh);
   width: 100vw;
   display: flex;
   flex-direction: column;
